[package]
name = "mastermind_game"
version = "0.1.0"
edition = "2024"

[dependencies]
# chacha20 = { version = "0.10.0", default-features = false, features = ["rng"] }
rand_chacha = { version = "*", default-features = false, features = ["serde"] }
console_error_panic_hook = "0.1"
getrandom = { version = "*", features = ["wasm_js"] }
rand = "0.10.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Document",
    "HtmlElement",
    "Node",
    "Text",
    "Window",
] }
